feat(metrics): integrate micrometer and prometheus metrics endpoint
Implement comprehensive metrics collection and exposition:
- Configure Prometheus registry at /metrics endpoint
- Enable JVM metrics (memory, threads, GC)
- Enable system metrics (CPU, uptime)
- Enable HTTP server metrics (requests, connections)

Create custom metrics infrastructure for sync operations:
- SyncMetrics service with counters for users synced, errors, kafka publishes, keycloak events
- Timers for sync operation duration and kafka publish duration
- Gauges for last sync timestamp and active operations

Add MetricsInitializer to register all custom metrics on startup.

All metrics follow Prometheus naming conventions and exposition format.
Custom metrics infrastructure ready for future sync operations.

Completes task-003

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,14 @@ keycloak.client-id=admin-cli
 
 # Metrics
 quarkus.micrometer.export.prometheus.enabled=true
+quarkus.micrometer.export.prometheus.path=/metrics
+quarkus.micrometer.binder.jvm=true
+quarkus.micrometer.binder.system=true
+quarkus.micrometer.binder.http-server.enabled=true
+quarkus.micrometer.binder-enabled-default=true
+quarkus.micrometer.registry-enabled-default=true
+# Common tags for all metrics
+quarkus.micrometer.export.prometheus.default-registry=true
 
 # Health Checks
 quarkus.smallrye-health.ui.enable=true
